--- a/src/components/button/styles.css
+++ b/src/components/button/styles.css
@@ -1,13 +1,18 @@
 .button {
-  background-color: #FC4587;
-  border: none;
+  background: radial-gradient(circle,rgba(130, 5, 19, 1) 0%, rgba(94, 0, 9, 1) 100%);
+
+  border: 2px solid #ffa32f;
+
   padding: 10px 20px;
   font-size: 1.2em;
-  color: white;
+  color: #ffa32f;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  font-weight: bolder;
+  box-shadow: inset 0px 0px 10px 5px rgba(0, 0, 0, 0.9);
+
+  transition: all .2s;
 }
 
 .button:hover {
-  background-color: #1ABC9C;
+  filter: brightness(1.5);
 }
