--- a/src/style.css
+++ b/src/style.css
@@ -1,55 +1,38 @@
-:root {
-  background-color: #0E1A25;
-  color: #00CAC8;
+* {
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  box-sizing: border-box;
+  font-family: serif;
 }
 
-.logo {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  max-width: 150px;
-  width: auto;
-}
-
-.container {
-  background: url('https://i.postimg.cc/TY28jTqJ/bg4-ia.jpg') no-repeat center center/cover;
-  min-height: 100vh;
+#root {
   display: flex;
-  justify-content: center;
+}
+
+body {
+  background-image: url('./assets/background.png');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  max-width: 100vw;
+  max-height: 100vh;
+  overflow: hidden;
+}
+
+main {
+  flex: 1;
+}
+
+section {
+  display: flex;
   align-items: center;
-}
-
-.content {
-  text-align: center;
-  background-color: rgba(0, 0, 0, 0.5);
-  padding: 20px 40px;
-  border-radius: 8px;
-}
-
-.content h2 {
-  margin-bottom: 20px;
-}
-
-.conteudo-jogo {
-  background: rgba(0, 0, 0, 0.7);
-  box-shadow: 0 0 5px #ff1b7b;
-  margin: 30px;
-  padding: 20px;
-  height: 50vh;
-  display: flex;
   justify-content: center;
-  margin-top: 2rem;
-}
+  
+  border: 2px solid #ffa32f;
+  width: auto;
+  height: auto;
 
-.conteudo-jogo:hover {
-  background: rgba(0, 0, 0);
-  box-shadow: 0 0 5px #19caca;
-}
+  margin: 3rem;
 
-h2,
-p {
-  color: white;
+  backdrop-filter: blur(5px) brightness(50%);
 }
