--- a/src/style.css
+++ b/src/style.css
@@ -14,8 +14,8 @@ body {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  max-width: 100vw;
-  max-height: 100vh;
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
 }
 
@@ -28,9 +28,9 @@ section {
   align-items: center;
   justify-content: center;
   
-  border: 2px solid #ffa32f;
-  width: auto;
-  height: auto;
+  border: 2px solid #FFA32F;
+  max-width: calc(100% - 6rem);
+  max-height: calc(100% - 6rem);
 
   margin: 3rem;
 
