--- a/src/games/game-1/styles.css
+++ b/src/games/game-1/styles.css
@@ -1,12 +1,11 @@
-#game_1 {
-  padding: 2rem;
-}
+#game_1 {}
 
 #game_1 #message {
   font-size: 2rem;
   color: white;
   margin-bottom: 2rem;
 
+  text-align: center;
   width: 100%;
   height: 4rem;
 }
@@ -18,17 +17,18 @@
 #game_1 .resources {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-around;
+  gap: 2rem;
 }
 
 @keyframes increase {
-  from { transform: translateY(14px) }
-  to { transform: translateY(-14px) }
+  from { transform: translateY(5px) }
+  to { transform: translateY(-20px) }
 }
 
 @keyframes decrease {
-  from { transform: translateY(14px) }
-  to { transform: translateY(42px) }
+  from { transform: translateY(5px) }
+  to { transform: translateY(30px) }
 }
 
 #animation-gold,
@@ -36,7 +36,6 @@
 #animation-food,
 #animation-stone {
   position: absolute;
-  z-index: -1;
 
   top: 0;
   left: 0;
@@ -47,7 +46,6 @@
 .animation-increase {
   right: 0;
   position: absolute;
-  opacity: .8;
 
   animation-duration: 1s;
   animation-name: increase;
@@ -56,10 +54,17 @@
 .animation-decrease {
   right: 0;
   position: absolute;
-  opacity: .8;
 
   animation-duration: 1s;
   animation-name: decrease;
+}
+
+#game_1 .resources {
+  box-shadow: inset 0 0 50px 20px #000000;
+  border-block: 2px solid #5d5d57;
+
+  margin-bottom: 2rem;
+  padding: 1rem;
 }
 
 #game_1 .resources > div {
@@ -67,10 +72,12 @@
   align-items: center;
   gap: 1rem;
   position: relative;
-  margin-bottom: 2rem;
 }
 
-#game_1 .resources > div span {
+#game_1 .resources img {
+  height: 3rem;
+}
+  #game_1 .resources > div span {
   color: #fff;
   font-size: 2rem;
   font-weight: bolder;
@@ -79,6 +86,7 @@
 #game_1 .market {
   display: flex;
   justify-content: space-between;
+  padding-right: 3rem;
 }
 
 #game_1 .market .image {
@@ -86,7 +94,6 @@
   display: flex;
   align-items: center;
 }
-
 
 #game_1 .market .image img {
   width: 100%;
