--- a/src/games/game-1/styles.css
+++ b/src/games/game-1/styles.css
@@ -1,4 +1,7 @@
-#game_1 {}
+#game_1 {
+  width: 100%;
+  height: 100%;
+}
 
 #game_1 #message {
   font-size: 2rem;
@@ -8,6 +11,20 @@
   text-align: center;
   width: 100%;
   height: 4rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+#game_1 #message .price {
+  font-weight: bolder;
+  font-style: italic;
+}
+
+#game_1 #message span {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
 #game_1 #message img {
@@ -16,9 +33,11 @@
 
 #game_1 .resources {
   display: flex;
+  width: 100%;
   flex-direction: row;
   justify-content: space-around;
   gap: 2rem;
+  margin-top: 5rem;
 }
 
 @keyframes increase {
@@ -126,7 +145,7 @@
   border: 2px solid #5d5d57;
 
   padding: 10px 20px;
-  font-size: 1.2em;
+  font-size: 1.2rem;
   color: #ffa32f;
   cursor: pointer;
   box-shadow: inset 0px 0px 5px 5px rgba(0, 0, 0, 0.9);
@@ -137,6 +156,8 @@
 
 #game_1 .exchange button img {
   position: absolute;
+  width: 3rem;
+  bottom: 1.5rem;
   z-index: 1;
 }
 
