--- a/src/games/game-2/styles.css
+++ b/src/games/game-2/styles.css
@@ -1,3 +1,70 @@
 #game_2 {
   color: #FFFFFF;
+  width: 100%;
+  height: 100%;
+  padding: 5rem;
+}
+
+#game_2 .header {
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+#game_2 .header h2 {
+  font-size: 2rem;
+}
+
+#game_2 .header p {
+  font-size: 1.5rem;
+}
+
+#game_2 #buttons {
+  display: flex;
+  justify-content: space-between;
+  gap: 2rem;
+
+}
+
+#game_2 .button-icon {
+  
+  background: none;
+
+  border: none;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: .25rem;
+  color: #FFFFFF;
+  filter: brightness(.8);
+  position: relative;
+}
+
+#game_2 .button-icon img {
+  border: 2px solid white;
+  width: 100%;
+}
+
+#game_2 .button-icon span {
+  font-weight: bold;
+  font-size: 1.2rem;
+  position: absolute;
+  bottom: -.5rem;
+
+  transform: translateY(100%); 
+}
+
+
+#game_2 .button-icon:hover img {
+  border-color: #FFA32F;
+}
+
+#game_2 .button-icon:hover {
+  filter: brightness(1.2);
+  color: #FFA32F;
+}
+
+#game_2 #result {
+  text-align: center;
+  margin-top: 5rem;
 }
