--- a/src/games/game-2/styles.css
+++ b/src/games/game-2/styles.css
@@ -18,17 +18,34 @@
   font-size: 1.5rem;
 }
 
+#game_2 #info {
+  display: flex;
+  flex-direction: column;
+  height: 3rem;
+}
+#game_2 #info .wins,
+#game_2 #info .loses {
+  font-style: italic;
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+#game_2 #info .wins {
+  color: #00FE00;
+}
+
+#game_2 #info .loses {
+  color: #EB0000;
+}
+
 #game_2 #buttons {
   display: flex;
   justify-content: space-between;
   gap: 2rem;
-
 }
 
 #game_2 .button-icon {
-  
   background: none;
-
   border: none;
   cursor: pointer;
   display: flex;
@@ -53,7 +70,6 @@
 
   transform: translateY(100%); 
 }
-
 
 #game_2 .button-icon:hover img {
   border-color: #FFA32F;
