--- a/src/games/game-2/styles.css
+++ b/src/games/game-2/styles.css
@@ -2,7 +2,8 @@
   color: #FFFFFF;
   width: 100%;
   height: 100%;
-  padding: 5rem;
+  padding-inline: 5rem;
+  padding-top: 2rem;
 }
 
 #game_2 .header {
@@ -18,30 +19,50 @@
   font-size: 1.5rem;
 }
 
-#game_2 #info {
-  display: flex;
-  flex-direction: column;
-  height: 3rem;
-}
-#game_2 #info .wins,
-#game_2 #info .loses {
-  font-style: italic;
-  font-size: 1rem;
-  font-weight: bold;
-}
-
-#game_2 #info .wins {
-  color: #00FE00;
-}
-
-#game_2 #info .loses {
-  color: #EB0000;
-}
-
-#game_2 #buttons {
+#game_2 #chooseUnits {
   display: flex;
   justify-content: space-between;
   gap: 2rem;
+}
+
+#game_2 #unitDetails {
+  display: flex;
+  justify-content: space-around;
+  gap: 2rem;
+  padding: 2rem;
+}
+
+#game_2 #unitDetails .info {
+  display: flex;
+  flex-direction: column;
+}
+
+#game_2 #unitDetails img {
+  border: 4px solid #FFA32F;
+}
+
+#game_2 #unitDetails strong {
+  text-align: center;
+  display: block;
+  font-size: 2rem;
+  margin-bottom: 2rem;
+  color: #FFA32F;
+}
+
+#game_2 #unitDetails .info .counters {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+#game_2 #unitDetails .info .counters div {
+  display: flex;
+  flex-direction: column;
+}
+
+#game_2 #unitDetails .info .counters i {
+  font-size: 1.5rem;
+  margin-bottom: .5rem;
 }
 
 #game_2 .button-icon {
@@ -78,10 +99,6 @@
 #game_2 .button-icon:hover {
   filter: brightness(1.2);
   color: #FFA32F;
-}
-
-#game_2 .button-icon {
-
 }
 
 #game_2 #result {
