--- a/src/games/game-2/styles.css
+++ b/src/games/game-2/styles.css
@@ -23,6 +23,7 @@
   display: flex;
   justify-content: space-between;
   gap: 2rem;
+  padding-top: 2rem;
 }
 
 #game_2 #unitDetails {
@@ -84,12 +85,13 @@
 }
 
 #game_2 .button-icon span {
+  visibility: hidden;
   font-weight: bold;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   position: absolute;
-  bottom: -.5rem;
+  top: -.5rem;
 
-  transform: translateY(100%); 
+  transform: translateY(-100%); 
 }
 
 #game_2 .button-icon:hover img {
