--- a/src/games/game-2/styles.css
+++ b/src/games/game-2/styles.css
@@ -1,14 +1,17 @@
 #game_2 {
   color: #FFFFFF;
+  display: grid;
+  grid-template-rows: 20vh 1fr;
+  gap: 2rem;
+
+
   width: 100%;
   height: 100%;
-  padding-inline: 5rem;
-  padding-top: 2rem;
 }
 
 #game_2 .header {
   text-align: center;
-  margin-bottom: 2rem;
+  margin-top: 2rem;
 }
 
 #game_2 .header h2 {
@@ -16,54 +19,14 @@
 }
 
 #game_2 .header p {
+  margin-top: 2rem;
   font-size: 1.5rem;
 }
 
-#game_2 #chooseUnits {
+#game_2 .chooseUnits {
   display: flex;
-  justify-content: space-between;
-  gap: 2rem;
-  padding-top: 2rem;
-}
-
-#game_2 #unitDetails {
-  display: flex;
-  justify-content: space-around;
-  gap: 2rem;
-  padding: 2rem;
-}
-
-#game_2 #unitDetails .info {
-  display: flex;
-  flex-direction: column;
-}
-
-#game_2 #unitDetails img {
-  border: 4px solid #FFA32F;
-}
-
-#game_2 #unitDetails strong {
-  text-align: center;
-  display: block;
-  font-size: 2rem;
-  margin-bottom: 2rem;
-  color: #FFA32F;
-}
-
-#game_2 #unitDetails .info .counters {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-}
-
-#game_2 #unitDetails .info .counters div {
-  display: flex;
-  flex-direction: column;
-}
-
-#game_2 #unitDetails .info .counters i {
-  font-size: 1.5rem;
-  margin-bottom: .5rem;
+  gap: 1rem;
+  padding-inline: 1rem;
 }
 
 #game_2 .button-icon {
@@ -85,13 +48,12 @@
 }
 
 #game_2 .button-icon span {
-  visibility: hidden;
   font-weight: bold;
   font-size: 1.5rem;
   position: absolute;
-  top: -.5rem;
+  bottom: -1rem;
 
-  transform: translateY(-100%); 
+  transform: translateY(100%); 
 }
 
 #game_2 .button-icon:hover img {
