--- a/src/games/game-2/styles.css
+++ b/src/games/game-2/styles.css
@@ -27,6 +27,67 @@
   display: flex;
   gap: 1rem;
   padding-inline: 1rem;
+  padding-top: 5rem;
+}
+
+#game_2 .unitDetails {
+  padding-inline: 5rem;
+}
+
+#game_2 .unitDetails h3 {
+  color: #FFA32F;
+  font-size: 3rem;
+  text-align: center;
+}
+
+#game_2 .unitDetails .info {
+  display: grid;
+  margin-top: 2rem;
+  gap: 2rem;
+  grid-template-columns: 1fr 1fr;
+  justify-content: space-between;
+}
+
+#game_2 .unitDetails .info .unitImg {
+  border: 4px solid #FFA32F;
+  height: 100%;
+}   
+
+
+#game_2 .unitDetails .counters {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+#game_2 .unitDetails .counters h4 {
+  font-size: 1.5rem;
+  margin-bottom: .5rem;
+}
+
+#game_2 .unitDetails .counters .win,
+#game_2 .unitDetails .counters .lose {
+  display: flex;
+  flex-direction: column;
+  align-items: space-between;
+}
+
+#game_2 .unitDetails .counters .win img,
+#game_2 .unitDetails .counters .lose img{
+  width: 50%;
+}
+
+#game_2 .unitDetails .counters .win #winUnits,
+#game_2 .unitDetails .counters .lose #loseUnits {
+  display: flex;
+  gap: 1rem;
+}
+
+#game_2 .unitDetails .counters .win #winUnits div,
+#game_2 .unitDetails .counters .lose #loseUnits div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #game_2 .button-icon {
@@ -51,9 +112,9 @@
   font-weight: bold;
   font-size: 1.5rem;
   position: absolute;
-  bottom: -1rem;
+  top: -1rem;
 
-  transform: translateY(100%); 
+  transform: translateY(-100%); 
 }
 
 #game_2 .button-icon:hover img {
