--- a/src/games/game-2/styles.css
+++ b/src/games/game-2/styles.css
@@ -1,7 +1,8 @@
 #game_2 {
   color: #FFFFFF;
-  display: grid;
-  grid-template-rows: 20vh 1fr;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
   gap: 1rem;
 
   width: 100%;
@@ -10,11 +11,10 @@
 
 #game_2 .header {
   text-align: center;
-  margin-top: 2rem;
 }
 
 #game_2 .header h2 {
-  font-size: 2rem;
+  font-size: 3rem;
 }
 
 #game_2 .header #subtitle {
@@ -58,6 +58,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  gap: 2rem;
 }
 
 #game_2 .unitDetails .counters h4 {
@@ -74,12 +75,13 @@
 
 #game_2 .unitDetails .counters .win img,
 #game_2 .unitDetails .counters .lose img{
-  width: 50%;
+  height: 10vh;
 }
 
 #game_2 .unitDetails .counters .win #winUnits,
 #game_2 .unitDetails .counters .lose #loseUnits {
   display: flex;
+  justify-content: space-around;
   gap: 1rem;
 }
 
@@ -88,6 +90,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 }
 
 #game_2 .result {
