--- a/src/games/game-3/styles.css
+++ b/src/games/game-3/styles.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  padding-inline: 2rem;
 }
 
 #game_3 .header {
@@ -21,4 +22,28 @@
   color: #FFFFFF;
   font-size: 2rem;
   margin-bottom: 1rem;
+}
+
+#game_3 .gates {
+  display: flex;
+  gap: 2rem;
+}
+
+#game_3 .button-gate {
+  cursor: pointer;
+  border: 4px solid white;
+  background: none;
+}
+
+#game_3 .button-gate .button-img {
+  width: 100%;
+  height: 100%;
+  filter: brightness(.8);
+}
+
+#game_3 .button-gate:hover {
+  border-color: #FFA32F;
+}
+#game_3 .button-gate:hover .button-img {
+  filter: brightness(1.2);
 }
