--- a/src/games/game-4/styles.css
+++ b/src/games/game-4/styles.css
@@ -1,13 +1,34 @@
-#game-4 .header h2 {
+#game-4 #title {
   color: #FFFFFF;
-  font-size: 2rem;
+  font-size: 3rem;
   text-align: center;
+}
+
+#game-4 #main {
+  display: flex;  
+  align-items: center;
+  justify-content: center;
 }
 
 #game-4 .units{
   display: flex;
   flex-wrap: wrap;
   gap: 2rem;
+  text-align: center;
+}
+
+#game-4 .units > div {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+
+#game-4 .units > div > span {
+  color: #FFFFFF;
+  font-weight: bold;
+  font-size: 1.5rem;
 }
 
 #game-4 .select-unit {
@@ -19,7 +40,7 @@
   border: 4px solid transparent;
   cursor: pointer;
 
-  width: 200px;
+  width: 150px;
 }
 
 #game-4 .select-unit:hover {
@@ -28,10 +49,10 @@
 
 #game-4 .select-unit img {
   width: 100%;
+  height: 100%;
 }
 
 #game-4 .select-unit span {
-  font-size: 1.5rem;
-  font-weight: bold;
+  font-size: 1rem;
   color: #FFFFFF;
 }
