--- a/src/games/game-2/styles.css
+++ b/src/games/game-2/styles.css
@@ -13,7 +13,7 @@
   text-align: center;
 }
 
-#game_2 .header h2 {
+#game_2 .header #title {
   font-size: 3rem;
 }
 
@@ -24,73 +24,17 @@
   justify-content: space-evenly;
 }
 
+#game_2 #main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 #game_2 .chooseUnits {
   display: flex;
   gap: 1rem;
   padding-inline: 1rem;
   padding-top: 5rem;
-}
-
-#game_2 .unitDetails {
-  padding-inline: 5rem;
-}
-
-#game_2 .unitDetails h3 {
-  color: #FFA32F;
-  font-size: 3rem;
-  text-align: center;
-}
-
-#game_2 .unitDetails .info {
-  display: grid;
-  margin-top: 2rem;
-  gap: 2rem;
-  grid-template-columns: 1fr 1fr;
-  justify-content: space-between;
-}
-
-#game_2 .unitDetails .info .unitImg {
-  border: 4px solid #FFA32F;
-  height: 100%;
-}   
-
-#game_2 .unitDetails .counters {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  gap: 2rem;
-}
-
-#game_2 .unitDetails .counters h4 {
-  font-size: 1.5rem;
-  margin-bottom: .5rem;
-}
-
-#game_2 .unitDetails .counters .win,
-#game_2 .unitDetails .counters .lose {
-  display: flex;
-  flex-direction: column;
-  align-items: space-between;
-}
-
-#game_2 .unitDetails .counters .win img,
-#game_2 .unitDetails .counters .lose img{
-  height: 10vh;
-}
-
-#game_2 .unitDetails .counters .win #winUnits,
-#game_2 .unitDetails .counters .lose #loseUnits {
-  display: flex;
-  justify-content: space-around;
-  gap: 1rem;
-}
-
-#game_2 .unitDetails .counters .win #winUnits div,
-#game_2 .unitDetails .counters .lose #loseUnits div {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
 }
 
 #game_2 .result {
@@ -100,7 +44,7 @@
   align-items: center;
 }
 
-#game_2 .result h2 {
+#game_2 .result #title {
   color: #FFA32F;
   font-size: 2rem;
 }
@@ -149,17 +93,25 @@
 }
 
 #game_2 .button-icon img {
-  border: 2px solid white;
+  border: 4px solid white;
   width: 100%;
 }
 
-#game_2 .button-icon span {
+#game_2 .button-icon .name {
   font-weight: bold;
   font-size: 1.5rem;
   position: absolute;
   top: -1rem;
 
   transform: translateY(-100%); 
+}
+
+#game_2 .button-icon .info {
+  font-size: 1.5rem;
+  position: absolute;
+  bottom: -1rem;
+
+  transform: translateY(100%); 
 }
 
 #game_2 .button-icon:hover img {
