--- a/src/games/game-2/styles.css
+++ b/src/games/game-2/styles.css
@@ -2,7 +2,7 @@
   color: #FFFFFF;
   display: flex;
   flex-direction: column;
-  /* justify-content: space-evenly; */
+  justify-content: center;
   gap: 1rem;
 
   width: 100%;
@@ -14,7 +14,7 @@
 }
 
 #game_2 .header #title {
-  font-size: 3rem;
+  font-size: 2rem;
 }
 
 #game_2 .header #subtitle {
@@ -61,10 +61,6 @@
   font-size: 2rem;
 }
 
-#game_2 .result .units .unit img {
-  border: 4px solid #FFFFFF;
-}
-
 #game_2 .result .units .unit[data-wins=true] {
   color: #FFA32F;
 }
@@ -79,32 +75,41 @@
 }
 
 #game_2 .button-icon {
-  background: none;
-  border: none;
-  cursor: pointer;
   display: flex;
   flex-direction: column;
+  width: fit-content;
   align-items: center;
-  gap: .25rem;
-  color: #FFFFFF;
-  filter: brightness(.8);
+  background-color: #306B7F;
+  border: 5px solid transparent;
+  cursor: pointer;
   position: relative;
+
+  transition: all .5s;
 }
 
-#game_2 .button-icon img {
-  border: 4px solid #FFFFFF;
-}
-
-#game_2 .button-icon.win img {
-  border-color: #00FF00;
-}
-
-#game_2 .button-icon.lose img {
-  border-color: #FF0000;
+#game_2 .button-icon:hover {
+  border-color: #FFFB47;
 }
 
 #game_2 .button-icon .name {
+  color: #FFFFFF;
   font-weight: bold;
+  font-size: 1.5rem;
+}
+
+#game_2 .button-icon img {
+  width: 100%;
+}
+
+#game_2 .button-icon.win {
+  border-color: #00FC42;
+}
+
+#game_2 .button-icon.lose {
+  border-color: #F41A28;
+}
+
+#game_2 .button-icon .info  {
   font-size: 1.5rem;
   position: absolute;
   top: -1rem;
@@ -112,21 +117,18 @@
   transform: translateY(-100%); 
 }
 
-#game_2 .button-icon .info {
-  font-size: 1.5rem;
-  position: absolute;
-  bottom: -1rem;
-
-  transform: translateY(100%); 
+#game_2 .button-icon .info.win,
+#game_2 .button-icon .info.lose {
+  font-weight: bold;
+  font-size: 2rem;
 }
 
-#game_2 .button-icon:hover img {
-  border-color: #FFA32F;
+#game_2 .button-icon .info.win {
+  color: #00FC42;
 }
 
-#game_2 .button-icon:hover {
-  filter: brightness(1.2);
-  color: #FFA32F;
+#game_2 .button-icon .info.lose {
+  color: #F41A28;
 }
 
 #game_2 #result {
