--- a/src/games/game-2/styles.css
+++ b/src/games/game-2/styles.css
@@ -43,15 +43,21 @@
   align-items: center;
 }
 
-#game_2 .result #title {
+#game_2 .result .title {
   color: #FFA32F;
-  font-size: 2rem;
+  font-size: 3rem;
+  font-weight: bold;
 }
 
 #game_2 .result .units {
   display: flex;
   justify-content: space-evenly;
   gap: 4rem;
+}
+
+#game_2 .result .units .unit > span {
+  padding-bottom: 1rem;
+  font-style: italic;
 }
 
 #game_2 .result .units .unit {
@@ -61,20 +67,35 @@
   font-size: 2rem;
 }
 
-#game_2 .result .units .unit[data-wins=true] {
-  color: #FFA32F;
+#game_2 .result .units .unit div {
+  background-color: #306B7F;
+  border: 5px solid;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-#game_2 .result .units .unit[data-wins=true] img {
-  border-color: #FFA32F;
-  filter: brightness(1.2);
+#game_2 .result .units .unit div span {
+  font-weight: bold;
 }
 
-#game_2 .result .units .unit[data-wins=false] img {
-  filter: brightness(.8);
+#game_2 .result .units .unit div img{
+  width: 100%;
 }
 
-#game_2 .button-icon {
+#game_2 .result .units .unit[data-result='draw'] div {
+  border-color: #FFFFFF;
+}
+
+#game_2 .result .units .unit[data-result='won'] div {
+  border-color: #00FC42;
+}
+
+#game_2 .result .units .unit[data-result='lose'] div {
+  border-color: #F41A28;
+}
+
+#game_2 .button-unit {
   display: flex;
   flex-direction: column;
   width: fit-content;
@@ -87,29 +108,29 @@
   transition: all .5s;
 }
 
-#game_2 .button-icon:hover {
+#game_2 .button-unit:hover {
   border-color: #FFFB47;
 }
 
-#game_2 .button-icon .name {
+#game_2 .button-unit .name {
   color: #FFFFFF;
   font-weight: bold;
   font-size: 1.5rem;
 }
 
-#game_2 .button-icon img {
+#game_2 .button-unit img {
   width: 100%;
 }
 
-#game_2 .button-icon.win {
+#game_2 .button-unit.win {
   border-color: #00FC42;
 }
 
-#game_2 .button-icon.lose {
+#game_2 .button-unit.lose {
   border-color: #F41A28;
 }
 
-#game_2 .button-icon .info  {
+#game_2 .button-unit .info  {
   font-size: 1.5rem;
   position: absolute;
   top: -1rem;
@@ -117,21 +138,16 @@
   transform: translateY(-100%); 
 }
 
-#game_2 .button-icon .info.win,
-#game_2 .button-icon .info.lose {
+#game_2 .button-unit .info.win,
+#game_2 .button-unit .info.lose {
   font-weight: bold;
   font-size: 2rem;
 }
 
-#game_2 .button-icon .info.win {
+#game_2 .button-unit .info.win {
   color: #00FC42;
 }
 
-#game_2 .button-icon .info.lose {
+#game_2 .button-unit .info.lose {
   color: #F41A28;
-}
-
-#game_2 #result {
-  text-align: center;
-  margin-top: 5rem;
 }
