--- a/src/games/game-4/styles.css
+++ b/src/games/game-4/styles.css
@@ -8,6 +8,7 @@
   display: flex;  
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 
 #game-4 .units{
@@ -31,20 +32,31 @@
   font-size: 1.5rem;
 }
 
+#game-4 #selected-units {
+  display: flex;
+  gap: 2rem;
+}
+
+#game-4 #selected-units div {
+  border: 5px solid #FFFFFF;
+  width: 100px;
+  height: 100px;
+}
+
 #game-4 .select-unit {
   display: flex;
   flex-direction: column;
   width: fit-content;
   align-items: center;
   background-color: #306B7F;
-  border: 4px solid transparent;
+  border: 5px solid transparent;
   cursor: pointer;
 
   width: 150px;
 }
 
 #game-4 .select-unit:hover {
-  border: 4px solid #FFFFFF;
+  border-color: #FFFB47;
 }
 
 #game-4 .select-unit img {
@@ -55,4 +67,32 @@
 #game-4 .select-unit span {
   font-size: 1rem;
   color: #FFFFFF;
+  font-weight: bold;
+}
+
+#game-4 .selected-unit {
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+  align-items: center;
+  background-color: #00FC42;
+  border: 5px solid transparent;
+  cursor: pointer;
+
+  width: 120px;
+}
+
+#game-4 .selected-unit:hover {
+  border-color: #F41A28;
+}
+
+#game-4 .selected-unit img {
+  width: 100%;
+  height: 100%;
+}
+
+#game-4 .selected-unit span {
+  font-size: 1rem;
+  color: #000000;
+  font-weight: bold;
 }
