--- a/src/games/game-4/styles.css
+++ b/src/games/game-4/styles.css
@@ -39,8 +39,13 @@
 
 #game-4 #selected-units div {
   border: 5px solid #FFFFFF;
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 170px;
+  position: relative;
+}
+
+#game-4 #start-battle-button {
+  margin-block: 2rem;
 }
 
 #game-4 .select-unit {
@@ -79,7 +84,13 @@
   border: 5px solid transparent;
   cursor: pointer;
 
-  width: 120px;
+  position: absolute;
+
+  top: -5px;
+  left: -5px;
+  bottom: -5px;
+  right: -5px;
+  
 }
 
 #game-4 .selected-unit:hover {
@@ -88,7 +99,6 @@
 
 #game-4 .selected-unit img {
   width: 100%;
-  height: 100%;
 }
 
 #game-4 .selected-unit span {
