--- a/src/games/game-4/styles.css
+++ b/src/games/game-4/styles.css
@@ -2,6 +2,7 @@
   color: #FFFFFF;
   font-size: 3rem;
   text-align: center;
+  margin-bottom: 1rem;
 }
 
 #game-4 #main {
@@ -11,7 +12,7 @@
   flex-direction: column;
 }
 
-#game-4 .units{
+#game-4 .units {
   display: flex;
   flex-wrap: wrap;
   gap: 2rem;
@@ -23,6 +24,7 @@
   align-items: center;
   flex-direction: column;
   gap: 1rem;
+  padding: 1rem;
 }
 
 #game-4 .units > div > span {
@@ -53,15 +55,28 @@
   gap: 2rem;
 }
 
-#game-4 #selected-units div {
-  border: 5px solid #FFFFFF;
-  width: 150px;
-  height: 170px;
-  position: relative;
+#game-4 .select-unit.weak span,
+#game-4 .select-unit.strong span {
+  color: #000000;
 }
 
-#game-4 #start-battle-button {
-  margin-block: 2rem;
+#game-4 .select-unit.strong {
+  background-color: #00FC42;
+}
+
+#game-4 .select-unit.weak {
+  background-color: #F41A28;
+}
+
+#game-4 .select-unit.weak span {
+  color: #000000;
+}
+
+#game-4 #selected-units div {
+  border: 5px solid #FFFFFF;
+  width: 90px;
+  height: 100px;
+  position: relative;
 }
 
 #game-4 .select-unit {
@@ -73,17 +88,20 @@
   border: 5px solid transparent;
   cursor: pointer;
 
-  width: 150px;
-}
+  transition: all .5s;
 
-#game-4 .select-unit:hover {
-  border-color: #FFFB47;
+  width: 150px;
 }
 
 #game-4 .select-unit img {
   width: 100%;
   height: 100%;
 }
+
+#game-4 .select-unit:hover {
+  border-color: #FFFB47;
+}
+
 
 #game-4 .select-unit span {
   font-size: 1rem;
@@ -115,10 +133,11 @@
 
 #game-4 .selected-unit img {
   width: 100%;
+  height: 100%;
 }
 
 #game-4 .selected-unit span {
-  font-size: 1rem;
+  font-size: .8rem;
   color: #000000;
   font-weight: bold;
 }
