--- a/src/games/game-2/styles.css
+++ b/src/games/game-2/styles.css
@@ -43,7 +43,7 @@
   align-items: center;
 }
 
-#game_2 .result .title {
+#game_2 #title-result {
   color: #FFFB47;
   font-size: 3rem;
   font-weight: bold;
@@ -65,33 +65,6 @@
   flex-direction: column;
   align-items: center;
   font-size: 2rem;
-}
-
-#game_2 .result .units .unit #life[data-life] {
-  height: 1rem;
-  width: 100%;
-
-  display: grid;
-  
-  grid-template-columns: attr(data-life %) auto;
-}
-
-
-#game_2 .result .units .unit #life[data-life] span:first-child {
-  height: 100%;
-  width: auto;
-  background-color: #00FC42;
-}
-
-#game_2 .result .units .unit #life span:last-child {
-  height: 100%;
-  width: auto;
-  background-color: #F41A28;
-}
-
-
-#game_2 .result .units .unit:last-child #life {
-  transform: rotate(180deg);
 }
 
 #game_2 .result .units .unit > div {
