--- a/src/games/game-5/styles.css
+++ b/src/games/game-5/styles.css
@@ -29,8 +29,26 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  color: var(--white);
+  font-size: 2rem;
+  font-weight: bold;
 }
 
+
+#game-5 .option {
+  cursor: pointer;
+  border: none;
+  padding: 1rem;
+  font-size: 1.8rem;
+  width: 100%;
+  color: var(--white);
+  background: var(--blue);
+}
+
+#game-5 .option:hover {
+  color: var(--gray);
+  background: var(--yellow);
+}
 
 
 
