--- a/src/games/game-5/styles.css
+++ b/src/games/game-5/styles.css
@@ -43,6 +43,14 @@
   background: var(--blue);
 }
 
+#game-5 .option[data-correct=true] {
+  background: var(--green);
+}
+
+#game-5 .option[data-correct=false] {
+  background: var(--red);
+}
+
 #game-5 .option:hover {
   color: var(--gray);
   background: var(--yellow);
@@ -57,8 +65,15 @@
   font-size: 3rem;
 }
 
+#game-5 .response {
+  margin-inline: 2rem;
+  display: flex;
+  gap: 3rem;
+}
 
-
+#game-5 .response button {
+  width: fit-content;
+}
 
 
 /* .questionario {
