--- a/src/games/game-5/styles.css
+++ b/src/games/game-5/styles.css
@@ -12,6 +12,41 @@
   flex-direction: column;
 }
 
+#game-5 .select-difficult {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+}
+
+#game-5 .select-difficult .title {
+  color: var(--white);
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+#game-5 .select-difficult .inputs-labels {
+  font-size: 1.5rem;
+  font-weight: bold;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+#game-5 .select-difficult .inputs-labels div {
+  color: var(--white);
+  display: flex;
+  gap: .5rem;
+}
+
+#game-5 .select-difficult .inputs-labels div input,
+#game-5 .select-difficult .inputs-labels div label {
+  cursor: pointer;
+}
+  
+  #game-5 .select-difficult .inputs-labels div input:checked ~ label {
+  color: var(--blue)
+}
+
 #game-5 #progress {
   color: #FFFFFF;
   font-size: 2rem;
