--- a/src/games/game-5/styles.css
+++ b/src/games/game-5/styles.css
@@ -98,6 +98,28 @@
   background: var(--yellow);
 }
 
+#game-5 #ranges {
+  display: flex;
+  gap: 3rem;
+}
+
+#game-5 .input-range {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+#game-5 .input-range label {
+  color: var(--white);
+  font-size: 1.5rem;
+}
+
+#game-5 .input-range span {
+  color: var(--white);
+  font-size: 1.8rem;
+}
+
 #game-5 .result {
   color: white;
   margin-bottom: 3rem;
