--- a/src/games/game-5/styles.css
+++ b/src/games/game-5/styles.css
@@ -137,6 +137,13 @@
   gap: 3rem;
 }
 
+#game-5 .question-options {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 #game-5 .response button {
   width: fit-content;
 }
