--- a/src/style.css
+++ b/src/style.css
@@ -35,6 +35,16 @@ main {
   flex: 1;
 }
 
+main h1{
+  margin-top: 20%;
+  font-size: 5rem;
+
+  text-align: center;
+  color: var(--red);
+  font-weight: bold;
+  text-shadow: 5px 5px var(--yellow);
+}
+
 section {
   display: flex;
   align-items: center;
