--- a/src/games/game-5/styles.css
+++ b/src/games/game-5/styles.css
@@ -1,6 +1,6 @@
 #game-5 #title {
   color: #FFFFFF;
-  font-size: 3rem;
+  font-size: var(--text-5xl);
   text-align: center;
   margin-bottom: 1rem;
 }
@@ -20,20 +20,20 @@
 }
 
 #game-5 .select-difficult .title {
-  color: var(--white);
-  font-size: 2rem;
+  color: var(--color-neutral-100);
+  font-size: var(--text-3xl);
   font-weight: bold;
 }
 
 #game-5 .select-difficult .inputs-labels {
-  font-size: 1.5rem;
+  font-size: var(--text-2xl);
   font-weight: bold;
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 #game-5 .select-difficult .inputs-labels div {
-  color: var(--white);
+  color: var(--color-neutral-100);
   display: flex;
   gap: .5rem;
 }
@@ -44,18 +44,18 @@
 }
   
   #game-5 .select-difficult .inputs-labels div input:checked ~ label {
-  color: var(--blue)
+  color: var(--color-blue-300)
 }
 
 #game-5 #progress {
   color: #FFFFFF;
-  font-size: 2rem;
+  font-size: var(--text-3xl);
 }
 
 #game-5 #question {
   text-align: center;
   color: #FFFFFF;
-  font-size: 1.8rem;
+  font-size: var(--text-4xl);
   margin-block: 2rem;
 }
 
@@ -63,23 +63,23 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  color: var(--white);
-  font-size: 2rem;
+  color: var(--color-neutral-100);
+  font-size: var(--text-3xl);
   font-weight: bold;
 }
 
 #game-5 .option {
   border: none;
   padding: 1rem;
-  font-size: 1.8rem;
+  font-size: var(--text-3xl);
   width: 100%;
-  color: var(--white);
-  background: var(--blue);
+  color: var(--color-neutral-100);
+  background: var(--color-blue-500);
   transition: all .5s;
 }
 
 #game-5 .option:hover {
-  background: var(--yellow);
+  background: var(--color-yellow-500);
 }
 
 #game-5 .option:not(:disabled) {
@@ -87,15 +87,14 @@
 }
 
 #game-5 .option[data-correct=true] {
-  background: var(--green);
-}
+  background: var(--color-green-500);}
 
 #game-5 .option[data-correct=false] {
-  background: var(--red);
+  background: var(--color-red-500);
 }
 
 #game-5 .option[data-response=true] {
-  border: 1rem solid var(--yellow);
+  border: 1rem solid var(--color-yellow-500);
 }
 
 #game-5 #ranges {
@@ -111,13 +110,13 @@
 }
 
 #game-5 .input-range label {
-  color: var(--white);
-  font-size: 1.5rem;
+  color: var(--color-neutral-100);
+  font-size: var(--text-2xl);
 }
 
 #game-5 .input-range span {
-  color: var(--white);
-  font-size: 1.8rem;
+  color: var(--color-neutral-100);
+  font-size: var(--text-2xl);
 }
 
 #game-5 .result {
@@ -128,7 +127,7 @@
 }
 
 #game-5 .result span {
-  font-size: 3rem;
+font-size: var(--text-5xl);
 }
 
 #game-5 .response {
