--- a/src/games/game-1/styles.css
+++ b/src/games/game-1/styles.css
@@ -4,8 +4,8 @@
 }
 
 #game_1 #message {
-  font-size: 2rem;
-  color: white;
+  font-size: var(--text-4xl);
+  color: var(--color-neutral-100);
   margin-bottom: 2rem;
 
   text-align: center;
@@ -79,8 +79,8 @@
 }
 
 #game_1 .resources {
-  box-shadow: inset 0 0 50px 20px #000000;
-  border-block: 2px solid #5d5d57;
+  box-shadow: inset 0 0 50px 20px var(--color-neutral-900);
+  border-block: 2px solid var(--color-orange-500);
 
   margin-bottom: 2rem;
   padding: 1rem;
@@ -97,8 +97,8 @@
   height: 3rem;
 }
   #game_1 .resources > div span {
-  color: #fff;
-  font-size: 2rem;
+  color: var(--color-neutral-100);
+  font-size: var(--text-4xl);
   font-weight: bolder;
 }
 
@@ -142,13 +142,12 @@
   width: 6rem;
   height: 6rem;
 
-  border: 2px solid #5d5d57;
+  border: 2px solid var(--color-neutral-500);
 
   padding: 10px 20px;
-  font-size: 1.2rem;
-  color: #ffa32f;
+  font-size: var(--text-xl);
   cursor: pointer;
-  box-shadow: inset 0px 0px 5px 5px rgba(0, 0, 0, 0.9);
+  box-shadow: inset 0px 0px 10px 5px var(--color-neutral-900);
 
   transition: all .2s;
   position: relative;
@@ -163,17 +162,16 @@
 
 #game_1 .exchange button .price {
   z-index: 10;
-  color: white;
+  color: var(--color-neutral-100);
   position: absolute;
   left: .5rem;
   top: .5rem;
-  text-shadow: 2px 2px 0 black;
   font-weight: bolder;
 }
 
 #game_1 .exchange button .type {
   z-index: 10;
-  color: white;
+  color: var(--color-neutral-100);
   position: absolute;
   bottom: .5rem;
 }
