--- a/src/games/game-1/styles.css
+++ b/src/games/game-1/styles.css
@@ -4,16 +4,16 @@
 }
 
 #game_1 #message {
-  font-size: var(--text-4xl);
-  color: var(--color-neutral-100);
-  margin-bottom: 2rem;
-
-  text-align: center;
   width: 100%;
-  height: 4rem;
   display: flex;
-  justify-content: space-evenly;
   align-items: center;
+  height: var(--spacing-16);
+  justify-content: space-evenly;
+  margin-bottom: var(--spacing-8);
+
+  color: var(--color-neutral-100);
+  font-size: var(--text-4xl);
+  text-align: center;
 }
 
 #game_1 #message .price {
@@ -24,7 +24,7 @@
 #game_1 #message span {
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: var(--spacing-8);
 }
 
 #game_1 #message img {
@@ -32,12 +32,12 @@
 }
 
 #game_1 .resources {
-  display: flex;
+  gap: var(--spacing-8);
   width: 100%;
+  display: flex;
   flex-direction: row;
+  margin-top: var(--spacing-20);
   justify-content: space-around;
-  gap: 2rem;
-  margin-top: 5rem;
 }
 
 @keyframes increase {
@@ -54,12 +54,11 @@
 #animation-wood,
 #animation-food,
 #animation-stone {
-  position: absolute;
-
   top: 0;
   left: 0;
-  bottom: 0;
   right: 0;
+  bottom: 0;
+  position: absolute;
 }
 
 .animation-increase {
@@ -79,24 +78,25 @@
 }
 
 #game_1 .resources {
+  padding: var(--spacing-4);
+  margin-bottom: var(--spacing-8);
+
   box-shadow: inset 0 0 50px 20px var(--color-neutral-900);
   border-block: 2px solid var(--color-orange-500);
-
-  margin-bottom: 2rem;
-  padding: 1rem;
 }
 
 #game_1 .resources > div {
   display: flex;
-  align-items: center;
-  gap: 1rem;
   position: relative;
+  align-items: center;
+  gap: var(--spacing-4);
 }
 
 #game_1 .resources img {
-  height: 3rem;
+  height: var(--spacing-12);
 }
-  #game_1 .resources > div span {
+
+#game_1 .resources > div span {
   color: var(--color-neutral-100);
   font-size: var(--text-4xl);
   font-weight: bolder;
@@ -105,11 +105,11 @@
 #game_1 .market {
   display: flex;
   justify-content: space-between;
-  padding-right: 3rem;
+  padding-right: var(--spacing-12);
 }
 
 #game_1 .market .image {
-  margin-right: 2rem;
+  margin-right: var(--spacing-8);
   display: flex;
   align-items: center;
 }
@@ -130,50 +130,50 @@
 #game_1 .sell, 
 #game_1 .buy {
   display: flex;
-  gap: 1rem;
+  gap: var(--spacing-4);
 }
 
 #game_1 .exchange button {
-  background: transparent;
   display: flex;
-  flex-direction: column;
   align-items: center;
-
-  width: 6rem;
-  height: 6rem;
-
-  border: 2px solid var(--color-neutral-500);
-
-  padding: 10px 20px;
-  font-size: var(--text-xl);
-  cursor: pointer;
+  flex-direction: column;
+  width: var(--spacing-24);
+  height: var(--spacing-24);
+  
+  
   box-shadow: inset 0px 0px 10px 5px var(--color-neutral-900);
+  border: 2px solid var(--color-neutral-500);
+  font-size: var(--text-xl);
+  background: transparent;
+  cursor: pointer;
 
   transition: all .2s;
   position: relative;
 }
 
 #game_1 .exchange button img {
-  position: absolute;
-  width: 3rem;
-  bottom: 1.5rem;
   z-index: 1;
+  position: absolute;
+  width: var(--spacing-12);
+  bottom: var(--spacing-6);
 }
 
 #game_1 .exchange button .price {
   z-index: 10;
-  color: var(--color-neutral-100);
   position: absolute;
-  left: .5rem;
-  top: .5rem;
+  top: var(--spacing-2);
+  left: var(--spacing-2);
+
+  color: var(--color-neutral-100);
   font-weight: bolder;
 }
 
 #game_1 .exchange button .type {
   z-index: 10;
-  color: var(--color-neutral-100);
   position: absolute;
-  bottom: .5rem;
+  bottom: var(--spacing-2);
+
+  color: var(--color-neutral-100);
 }
 
 #game_1 .exchange button:disabled {
